# stm32f4xx_hal_template

./: CMakeLists.txt  Makefile  hal_f4.cmake  readme.md  stm32f4.cmake
oocd/: oocd_jlink.cfg  oocd_stlink_v2.cfg
src/: main.c  stm32f4xx_hal_conf.h
startup/: system_f10xx.c
